|Priyanshu| translate text for header,footer and menu in Tamil

--- a/locales/ta.json
+++ b/locales/ta.json
@@ -13,21 +13,21 @@
 	"Tamil": "தமிழ்",
 	"Telugu": "తెలుగు",
 	"Vakyansh: The Home of Speech Recognition Essentials for Indian Languages": "Vakyansh: The Home of Speech Recognition Essentials for Indian Languages",
-	"Know More": "Know More",
+	"Know More": "மேலும் அறிய",
 	"Vakyansh aims to host the key essentials of Automatic Speech Recognition (ASR) technology, focusing on Indian languages. It is a resource that allows people to build applications that leverage speech recognition.": "Vakyansh aims to host the key essentials of Automatic Speech Recognition (ASR) technology, focusing on Indian languages. It is a resource that allows people to build applications that leverage speech recognition.",
 	"Select language": "Select language",
 	"START RECORDING": "START RECORDING",
-	"We rely on your contributions": "We rely on your contributions",
+	"We rely on your contributions": "உங்கள் பங்களிப்புகளை நாங்கள் சார்ந்திருக்கிறோம்",
 	"For the development of a speech recognition product that focuses solely on Indian languages, there is a need for an enormous repository of diversified Indian voices. Through Vakyansh, we are reaching out to you to contribute your voices to create a diverse open source repository of Indian voices to this end.": "For the development of a speech recognition product that focuses solely on Indian languages, there is a need for an enormous repository of diversified Indian voices. Through Vakyansh, we are reaching out to you to contribute your voices to create a diverse open source repository of Indian voices to this end.",
-	"speakers contributed": "speakers contributed",
+	"speakers contributed": "பங்களித்த பேச்சாளர்கள் பங்களித்த",
 	"Speaker Diversification": "Speaker Diversification",
 	"Show details": "Show details",
 	"START RECORDING IN": "START RECORDING IN",
 	"Speaker Details": "Speaker Details",
 	"Speech Recognition Models": "Speech Recognition Models",
-	"About Us": "About Us",
-	"Terms & Conditions": "Terms & Conditions",
-	"Privacy Policy": "Privacy Policy",
+	"About Us": "எங்களை பற்றி",
+	"Terms & Conditions": "விதிமுறைகளும் நிபந்தனைகளும்",
+	"Privacy Policy": "தனியுரிமைக் கொள்கை",
 	"Mother Tongue": "Mother Tongue",
 	"Age Group": "Age Group",
 	"Gender": "Gender",
@@ -95,15 +95,53 @@
 	"Instructions": "Instructions",
 	"Play": "Play",
 	"Validating Instructions": "Validating Instructions",
-	"Say": "Say",
-	"Contribute Your Voice": "Contribute Your Voice",
-	"Contribute your voice to create an open data repository of Indian languages": "Contribute your voice to create an open data repository of Indian languages",
-	"Listen": "Listen",
-	"Verify What They Say": "Verify What They Say",
-	"Help us by validating the voice samples that others have contributed": "Help us by validating the voice samples that others have contributed",
+	"Say": "கூறு",
+	"Contribute Your Voice": "உங்கள் குரலில் பங்களிப்பு செய்யுங்கள்",
+	"Contribute your voice to create an open data repository of Indian languages": "இந்திய மொழிகளின் திறந்த தரவு களஞ்சியத்தை உருவாக்க உங்கள் குரலில் பங்களிப்பு செய்யுங்கள்",
+	"Listen": "கேள்",
+	"Verify What They Say": "அவர்கள் சொல்வதை சரிபார்க்கவும்",
+	"Help us by validating the voice samples that others have contributed": "மற்றவர்கள் பங்களித்த குரல் மாதிரிகளை சரிபார்த்து எங்களுக்கு உதவுங்கள்",
 	"Odia (Select languages)": "Odia (Select languages)",
-	"Select Your Preferred Language": "Select Your Preferred Language",
+	"Select Your Preferred Language": "உங்களுக்கு விருப்பமான மொழியைத் தேர்ந்தெடுக்கவும்",
 	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:",
 	"hrs recorded in": "%hours hrs recorded in %language",
-	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> விநாடிகளுக்குப் பிறகு பதிவு தானாகவே நிறுத்தப்படும்"
+	"hrs validated in" : "hrs validated in",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> விநாடிகளுக்குப் பிறகு பதிவு தானாகவே நிறுத்தப்படும்",
+	"Select the language for contribution": "பங்களிப்புக்கான மொழியைத் தேர்ந்தெடுக்கவும்",
+	"Show All": "Show All",
+	"Vakyansh: A crowdsourcing initiative for Indian languages": "வாகியான்ஷ்: இந்திய  மொழிகளுக்கான ஒரு கூட்டுசேகர முயற்சி",
+	"For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.": "இந்திய மொழிகளில் பேச்சறிதல் மாதிரிகளின் வளர்ச்சிக்கு, பன்முகப்படுத்தப்பட்ட இந்தியக் குரல்களின் திறந்த தரவு களஞ்சியத்தின் தேவை உள்ளது. இந்திய குரல்களின் மாறுபட்ட திறந்த தரவு களஞ்சியத்தை உருவாக்க உங்கள் குரலை பங்களிக்க வக்யான்ஷ் உங்களை அழைக்கிறது.",
+	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "நீங்கள் பங்களிக்கும் மாநிலங்கள், பேச்சுவழக்குகள், உச்சரிப்புகள், பாலினம் மற்றும் வயது பிரிவு போன்ற பலதரப்பட்ட தரவின் பன்முகத்தன்மை, பேச்சறிதல் மாதிரிகளை உருவாக்குவதற்கான அத்தியாவசியமான ஒன்றாகும்.  நாடு எங்கிலும் உள்ள இந்த பன்முகத்தன்மையின் முக்கியத்துவம், நமது மொழிகளை மேம்படுத்துவதில் கூட்டு வலிமையை அளிக்கிறது.",
+	"languages contributed": "பங்களித்த மொழிகள் ",
+	"hours recorded": "பதிவு செய்யப்பட்ட மணிநேரம்",
+	"Top Languages": "முன்னணி மொழிகள்",
+	"By hours of data contributed": "தரவு பங்களிகப்பட்ட மணிநேரங்களால்",
+	"By number of speakers": "பேச்சாளர்களின் எண்ணிக்கையால்",
+	"VIEW ALL DETAILS": "VIEW ALL DETAILS",
+	"Enter preferred username": "Enter preferred username",
+	"Username cannot be more than 12 characters": "Username cannot be more than 12 characters",
+	"Select Mother Tongue": "Select Mother Tongue",
+	"Select Age Group": "Select Age Group",
+	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>",
+	"Select the language": "Select the language",
+	"All Languages": "All Languages",
+	"Data Last Updated": "Data Last Updated",
+	"We do not have any data for this language, would you like to contribute for it?": "We do not have any data for this language, would you like to contribute for it?",
+	"Contribute Now": "Contribute Now",
+	"hours validated": "hours validated",
+	"Progress Chart": "Progress Chart",
+	"Monthly": "Monthly",
+	"Quarterly": "Quarterly",
+	"Gender Contribution": "Gender Contribution",
+	"State Wise distribution": "State Wise distribution",
+	"Age Group Distribution": "Age Group Distribution",
+	"An open data strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.": "An open data strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.",
+	"As the volume of internet users multiplies and there is a demand to access digital platforms for financial, educational and economic activities, there is a need to start thinking Indian languages first.": "As the volume of internet users multiplies and there is a demand to access digital platforms for financial, educational and economic activities, there is a need to start thinking Indian languages first.",
+	"Winning back our languages by introducing localization in our ecosystem": "Winning back our languages by introducing localization in our ecosystem",
+	"There is a felt need for a speech recognition technology that specializes in Indian languages, that meets a high accuracy bar and is closer to the daily language and communication functions of users of diverse Indian languages.": "There is a felt need for a speech recognition technology that specializes in Indian languages, that meets a high accuracy bar and is closer to the daily language and communication functions of users of diverse Indian languages.",
+	"Speech recognition is a technology that converts speech to real-time text. Such a model for Indian languages has the potential to become a building block to a digital first model, in various sectors, such as, education, healthcare and media.": "Speech recognition is a technology that converts speech to real-time text. Such a model for Indian languages has the potential to become a building block to a digital first model, in various sectors, such as, education, healthcare and media.",
+	"The tools, utilities and models proposed to be developed will rely on open source contributions through Vakyansh crowd sourcing platform.": "The tools, utilities and models proposed to be developed will rely on open source contributions through Vakyansh crowd sourcing platform.",
+	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative.": "Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative.",
+	"As a team, we are inviting you to join us and contribute upto 30 minutes of your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "As a team, we are inviting you to join us and contribute upto 30 minutes of your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.",
+	"EkStep Foundation": "EkStep Foundation"
 }
