--- a/locales/ta.json
+++ b/locales/ta.json
@@ -40,7 +40,7 @@
 	"I have read and agree to the": "I have read and agree to the",
 	"Terms and Conditions": "Terms and Conditions",
 	"LET'S GO": "LET'S GO",
-	"Hide details": "Hide details",
+	"Hide details": "விவரங்களை மறை",
 	"Sign In": "Sign In",
 	"Please enter your details.": "Please enter your details.",
 	"The site will host open data for training ASR models, open source utilities and pipelines to train ASR models and open ASR models themselves. Vakyansh also hosts tools to contribute your voices to create a diverse open data repository of Indian voices to this end. This data will be available in an open manner for all to use. It is a resource that allows people to build applications that leverage speech recognition.": "The site will host open data for training ASR models, open source utilities and pipelines to train ASR models and open ASR models themselves. Vakyansh also hosts tools to contribute your voices to create a diverse open data repository of Indian voices to this end. This data will be available in an open manner for all to use. It is a resource that allows people to build applications that leverage speech recognition.",
@@ -104,8 +104,8 @@
 	"Odia (Select languages)": "Odia (Select languages)",
 	"Select Your Preferred Language": "உங்களுக்கு விருப்பமான மொழியைத் தேர்ந்தெடுக்கவும்",
 	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:",
-	"hrs recorded in": "%hours hrs recorded in %language",
-	"hrs validated in" : "hrs validated in",
+	"hrs recorded in": "%hours மணிநேரம் %language இல் பதிவு செய்யப்பட்டுள்ளது",
+	"hrs validated in" : "%hours மணிநேரம் %language இல் சரிபார்க்கப்பட்டது",
 	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> விநாடிகளுக்குப் பிறகு பதிவு தானாகவே நிறுத்தப்படும்",
 	"Select the language for contribution": "பங்களிப்புக்கான மொழியைத் தேர்ந்தெடுக்கவும்",
 	"Show All": "Show All",
@@ -117,7 +117,7 @@
 	"Top Languages": "முன்னணி மொழிகள்",
 	"By hours of data contributed": "தரவு பங்களிகப்பட்ட மணிநேரங்களால்",
 	"By number of speakers": "பேச்சாளர்களின் எண்ணிக்கையால்",
-	"VIEW ALL DETAILS": "VIEW ALL DETAILS",
+	"VIEW ALL DETAILS": "எல்லா விவரங்களையும் காண்க",
 	"Enter preferred username": "Enter preferred username",
 	"Username cannot be more than 12 characters": "Username cannot be more than 12 characters",
 	"Select Mother Tongue": "Select Mother Tongue",
@@ -125,7 +125,7 @@
 	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>",
 	"Select the language": "Select the language",
 	"All Languages": "All Languages",
-	"Data Last Updated": "Data Last Updated",
+	"Data Last Updated": "தரவு கடைசியாக புதுப்பிக்கப்பட்ட நேரம்",
 	"We do not have any data for this language, would you like to contribute for it?": "We do not have any data for this language, would you like to contribute for it?",
 	"Contribute Now": "Contribute Now",
 	"hours validated": "hours validated",
@@ -143,5 +143,15 @@
 	"The tools, utilities and models proposed to be developed will rely on open source contributions through Vakyansh crowd sourcing platform.": "The tools, utilities and models proposed to be developed will rely on open source contributions through Vakyansh crowd sourcing platform.",
 	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative.": "Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative.",
 	"As a team, we are inviting you to join us and contribute upto 30 minutes of your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "As a team, we are inviting you to join us and contribute upto 30 minutes of your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.",
-	"EkStep Foundation": "EkStep Foundation"
+	"EkStep Foundation": "EkStep Foundation",
+	"minutes":"நிமிடங்கள்",
+	"hours": "மணிநேரம்",
+	"months": "மாதங்கள்",
+	"years": "ஆண்டுகள்",
+	"Speakers": "பேச்சாளர்கள்",
+	"contributed data": "பங்களித்த தரவு",
+	"languages": "மொழிகள்",
+	"Contribution Trend": "பங்களிப்பு போக்கு",
+	"Contribution Pattern": "பங்களிப்பு முறை"
+
 }
