|Priyanshu| translate text for Speaker Details  in Tamil

--- a/locales/ta.json
+++ b/locales/ta.json
@@ -23,23 +23,23 @@
 	"Speaker Diversification": "Speaker Diversification",
 	"Show details": "Show details",
 	"START RECORDING IN": "START RECORDING IN",
-	"Speaker Details": "Speaker Details",
+	"Speaker Details": "பேச்சாளர்கள் விவரங்கள்",
 	"Speech Recognition Models": "Speech Recognition Models",
 	"About Us": "எங்களை பற்றி",
 	"Terms & Conditions": "விதிமுறைகளும் நிபந்தனைகளும்",
 	"Privacy Policy": "தனியுரிமைக் கொள்கை",
-	"Mother Tongue": "Mother Tongue",
-	"Age Group": "Age Group",
-	"Gender": "Gender",
-	"All the fields are optional": "All the fields are optional",
-	"Not You? Change User": "Not You? Change User",
-	"Username": "Username",
+	"Mother Tongue": "தாய் மொழி",
+	"Age Group": "வயது பிரிவு",
+	"Gender": "பாலினம்",
+	"All the fields are optional": "எல்லா புலங்களும் கட்டாயமற்றவை",
+	"Not You? Change User": "நீங்கள் அல்லவா? பயனரை மாற்று",
+	"Username": "பயனர்பெயர்",
 	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
-	"Select Mother tongue": "Select Mother tongue",
+	"Select Mother tongue": "தாய்மொழியைத் தேர்ந்தெடுக்கவும்",
 	"Pick age range": "Pick age range",
-	"I have read and agree to the": "I have read and agree to the",
-	"Terms and Conditions": "Terms and Conditions",
-	"LET'S GO": "LET'S GO",
+	"I have read and agree to the": "நான் விதிமுறைகளையும் நிபந்தனைகளையும் படித்து ஒப்புக்கொள்கிறேன்",
+	"Terms and Conditions": "விதிமுறைகளும் நிபந்தனைகளும்",
+	"LET'S GO": "நாம் போகலாம்",
 	"Hide details": "விவரங்களை மறை",
 	"Sign In": "Sign In",
 	"Please enter your details.": "Please enter your details.",
@@ -62,9 +62,9 @@
 	"ABOUT THE ORGANISATION": "நிறுவனத்தைப் பற்றி",
 	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "ஏக்ஸ்டெப் அறக்கட்டளை கூட்டாளர்களைச் சேகரித்து, சிக்கலான சமூக சிக்கல்களைத் தீர்க்க திறந்த உள்கட்டமைப்பு, கருவிகள் மற்றும் கட்டமைப்பை உருவாக்குகிறது. சன்பேர்ட் என்று அழைக்கப்படும் திறந்த மூல டிஜிட்டல் உள்கட்டமைப்பை மேம்படுத்துவதன் மூலமும், சமூக இயங்குதள அணுகுமுறை எனப்படும் சிந்தனை மற்றும் செயலைப் பின்பற்றுவதன் மூலமும் இதைச் செய்கிறோம்.",
 	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "ஏக்ஸ்டெப் என்பது ரோஹிணி மற்றும் நந்தன் நிலேகனி மற்றும் சங்கர் மருவாடா ஆகியோரால் நிறுவப்பட்ட ஒரு லாப நோக்கற்ற அமைப்பாகும்.",
-	"Male": "Male",
-	"Female": "Female",
-	"Others": "Others",
+	"Male": "ஆண்",
+	"Female": "பெண்",
+	"Others": "மற்றவர்",
 	"Terms of Use": "Terms of Use",
 	"Copyright & Licensing Notice": "Copyright & Licensing Notice",
 	"Recording Instructions": "Recording Instructions",
@@ -118,11 +118,11 @@
 	"By hours of data contributed": "தரவு பங்களிகப்பட்ட மணிநேரங்களால்",
 	"By number of speakers": "பேச்சாளர்களின் எண்ணிக்கையால்",
 	"VIEW ALL DETAILS": "எல்லா விவரங்களையும் காண்க",
-	"Enter preferred username": "Enter preferred username",
+	"Enter preferred username": "விருப்பமான பயனர்பெயரை உள்ளிடவும்",
 	"Username cannot be more than 12 characters": "Username cannot be more than 12 characters",
-	"Select Mother Tongue": "Select Mother Tongue",
-	"Select Age Group": "Select Age Group",
-	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>",
+	"Select Mother Tongue": "தாய்மொழியைத் தேர்ந்தெடுக்கவும்",
+	"Select Age Group": "வயதுக் பிரிவைத் தேர்ந்தெடுக்கவும்",
+	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "நான் விதிமுறைகளையும் நிபந்தனைகளையும் படித்து ஒப்புக்கொள்கிறேன் <a href=\"/terms-and-conditions\"> விதிமுறைகளும் நிபந்தனைகளும் </a>",
 	"Select the language": "Select the language",
 	"All Languages": "All Languages",
 	"Data Last Updated": "தரவு கடைசியாக புதுப்பிக்கப்பட்ட நேரம்",
