|Ramu| Fixed missing translations

--- a/locales/te.json
+++ b/locales/te.json
@@ -102,12 +102,12 @@
 	"Contribute More": "మరింత సహాయం చేయండి",
 	"Share it with your friends and family": "దీన్ని మీ మిత్రులతో మరియు కుటుంబ సభ్యులతో షేర్ చెయ్యండి",
 	"Instructions": "సూచనలు",
-	"Thank you for your enthusiasm to validate the voice samples": "Thank you for your enthusiasm to validate the voice samples",
-	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.",
-	"Would you also like to contribute your voice?": "Would you also like to contribute your voice?",
-	"Start Contributing": "Start Contributing",
+	"Thank you for your enthusiasm to validate the voice samples": "గొంతులను చెల్లుబాటు చెయ్యడానికి ఉత్సాహం చూపినందుకు ధన్యవాదాలు",
+	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "మేము నూతనంగా <span id=\"spn-validation-language\"></span> భాష సమాచార సేకరణ కోసం చూస్తున్నాము మరియు అతి త్వరలో మీరు చెల్లుబాటు చెయ్యడానికి గొంతులు సేకరణ జరుగుతుందని అనుకుంటున్నాము",
+	"Would you also like to contribute your voice?": "మీరు మీ గొంతుని సహాయం చెయ్యాలని అనుకుంటున్నారా?",
+	"Start Contributing": "సహాయాన్ని ప్రారంభించండి",
 	"Thank you for validating!": "చెల్లుబాటు చేసినందుకు ధన్యవాదాలు",
-	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings",
+	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "మీరు మాకు <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> గొంతలను చెల్లుబాటు చేయడానికి మాకు సహాయం చేసారు.",
 	"Validate More": "మరిన్ని చెల్లుబాటు చెయ్యండి",
 	"Incorrect": "సరికానిది",
 	"Play": "ప్లే చెయ్యండి",
