|Priyanshu| translate text for Thankyou page in Tamil

--- a/locales/ta.json
+++ b/locales/ta.json
@@ -16,7 +16,7 @@
 	"Know More": "மேலும் அறிய",
 	"Vakyansh aims to host the key essentials of Automatic Speech Recognition (ASR) technology, focusing on Indian languages. It is a resource that allows people to build applications that leverage speech recognition.": "Vakyansh aims to host the key essentials of Automatic Speech Recognition (ASR) technology, focusing on Indian languages. It is a resource that allows people to build applications that leverage speech recognition.",
 	"Select language": "ஒரு மொழியைத் தேர்ந்தெடுக்கவும்",
-	"START RECORDING": "பதிவு செய்யத் தொடங்குங்கள்",
+	"START RECORDING": "பதிவு செய்",
 	"We rely on your contributions": "உங்கள் பங்களிப்புகளை நாங்கள் சார்ந்திருக்கிறோம்",
 	"For the development of a speech recognition product that focuses solely on Indian languages, there is a need for an enormous repository of diversified Indian voices. Through Vakyansh, we are reaching out to you to contribute your voices to create a diverse open source repository of Indian voices to this end.": "இந்திய மொழிகளில் பேச்சறிதல் மாதிரிகளின் வளர்ச்சிக்கு, பன்முகப்படுத்தப்பட்ட இந்தியக் குரல்களின் திறந்த தரவு களஞ்சியத்தின் தேவை உள்ளது. இந்திய குரல்களின் மாறுபட்ட திறந்த தரவு களஞ்சியத்தை உருவாக்க உங்கள் குரலை பங்களிக்க வக்யான்ஷ் உங்களை அழைக்கிறது.",
 	"speakers contributed": "பங்களித்த பேச்சாளர்கள் பங்களித்த",
@@ -79,13 +79,13 @@
 	"Error!!!": "Error!!!",
 	"An unexpected error occured while processing your request. Please try after some time.": "An unexpected error occured while processing your request. Please try after some time.",
 	"Close": "Close",
-	"Thank you for contributing!": "Thank you for contributing!",
-	"Your contribution has got us <b><span id=\"user-contribution\">0 seconds</span></b> closer to our goal!!!": "Your contribution has got us <b><span id=\"user-contribution\">0 seconds</span></b> closer to our goal!!!",
+	"Thank you for contributing!": "பங்களித்ததற்கு நன்றி!",
+	"Your contribution has got us <b><span id=\"user-contribution\">0 seconds</span></b> closer to our goal!!!": "உங்கள் பங்களிப்பு எங்கள் இலக்கை நெருங்கும் நேரத்தில் <b><span id=\"user-contribution\">0 seconds</span></b> வினாடிகள் குறைத்துள்ளது",
 	"Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.": "Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.",
 	"A contribution of 30-45 mins voice per speaker can make Vakyansh come closer to it’s vision.": "A contribution of 30-45 mins voice per speaker can make Vakyansh come closer to it’s vision.",
-	"We know you can do more!": "We know you can do more!",
-	"Contribute More": "Contribute More",
-	"Share it with your friends and family": "Share it with your friends and family",
+	"We know you can do more!": "உங்களால் இன்னும் செய்ய முடியும் என்று எங்களுக்குத் தெரியும்!",
+	"Contribute More": "மேலும் பங்களிக்க",
+	"Share it with your friends and family": "இதை உங்கள் நண்பர்கள் மற்றும் குடும்பத்தினருடன் பகிர்ந்து கொள்ளுங்கள்",
 	"Come Back again to<br />hit your goalpost": "Come Back again to<br />hit your goalpost",
 	"Please test your <b>microphone</b>": "Please test your <b>microphone</b>",
 	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
@@ -152,5 +152,20 @@
 	"languages": "மொழிகள்",
 	"Contribution Trend": "பங்களிப்பு போக்கு",
 	"Contribution Pattern": "பங்களிப்பு முறை",
-	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative.": "பேச்சறிதல் \"இயந்திர கற்றல்\" தொழில்நுட்பத்தை நம்பியுள்ளது. இதற்கு பன்முகப்படுத்தப்பட்ட இந்திய குரல்கள் மற்றும் அதனுடன் தொடர்புடைய உரையை உள்ளடக்கிய தரவுத்தொகுப்புகளின் பெரிய தொகுப்புகள் தேவைப்படுகிறது. ஏக்ஸ்டெப் அறக்கட்டளை, வாகியன்ஷ் மூலம், இந்திய குரல் பேசும் இந்திய மொழியின் மாறுபட்ட திறந்த களஞ்சியத்தை உருவாக்க விரும்புகிறது. இது இந்த முயற்சிக்கு பயன்படுத்தப்படகூடும்."
+	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative.": "பேச்சறிதல் \"இயந்திர கற்றல்\" தொழில்நுட்பத்தை நம்பியுள்ளது. இதற்கு பன்முகப்படுத்தப்பட்ட இந்திய குரல்கள் மற்றும் அதனுடன் தொடர்புடைய உரையை உள்ளடக்கிய தரவுத்தொகுப்புகளின் பெரிய தொகுப்புகள் தேவைப்படுகிறது. ஏக்ஸ்டெப் அறக்கட்டளை, வாகியன்ஷ் மூலம், இந்திய குரல் பேசும் இந்திய மொழியின் மாறுபட்ட திறந்த களஞ்சியத்தை உருவாக்க விரும்புகிறது. இது இந்த முயற்சிக்கு பயன்படுத்தப்படகூடும்.",
+	"Thank you for your enthusiasm to validate the voice samples": "குரல் மாதிரிகளை சரிபார்க்கும் உங்கள் உத்வேகத்திற்கு நன்றி",
+	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "<span id=\"spn-validation-language\"></span> மொழிக்கான தரவு பங்களிப்பு பயணத்தை நாங்கள் சமீபத்தில் தொடங்கினோம், விரைவில் உங்கள் சரிபார்ப்பிற்காக குரல் மாதிரிகள் சேகரிக்கப்படும் என்று நம்புகிறோம்.",
+	"Would you also like to contribute your voice?": "உங்கள் குரலையும் பங்களிக்க விரும்புகிறீர்களா?",
+	"Start Contributing": "பங்களிப்பைத் தொடங்குங்கள்",
+	"Thank you for validating!": "சரிபார்த்ததற்கு நன்றி!",
+	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> குரல் மாதிரிகளை சரிபார்க்க எங்களுக்கு உதவியுள்ளீர்கள்",
+	"Validate More": "மேலும் சரிபார்க்க",
+	"Incorrect": "Incorrect",
+	"Replay": "Replay",
+	"Pause": "Pause",
+	"Correct": "Correct",
+	"Skip": "Skip",
+	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
+	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
+	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample"
 }
