|Priyanshu| translate text for Dashboard in Tamil

--- a/locales/ta.json
+++ b/locales/ta.json
@@ -123,18 +123,18 @@
 	"Select Mother Tongue": "தாய்மொழியைத் தேர்ந்தெடுக்கவும்",
 	"Select Age Group": "வயதுக் பிரிவைத் தேர்ந்தெடுக்கவும்",
 	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "நான் விதிமுறைகளையும் நிபந்தனைகளையும் படித்து ஒப்புக்கொள்கிறேன் <a href=\"/terms-and-conditions\"> விதிமுறைகளும் நிபந்தனைகளும் </a>",
-	"Select the language": "Select the language",
-	"All Languages": "All Languages",
+	"Select the language": "ஒரு மொழியைத் தேர்ந்தெடுக்கவும்",
+	"All Languages": "எல்லா மொழிகள்",
 	"Data Last Updated": "தரவு கடைசியாக புதுப்பிக்கப்பட்ட நேரம்",
 	"We do not have any data for this language, would you like to contribute for it?": "We do not have any data for this language, would you like to contribute for it?",
-	"Contribute Now": "Contribute Now",
-	"hours validated": "hours validated",
-	"Progress Chart": "Progress Chart",
-	"Monthly": "Monthly",
-	"Quarterly": "Quarterly",
-	"Gender Contribution": "Gender Contribution",
-	"State Wise distribution": "State Wise distribution",
-	"Age Group Distribution": "Age Group Distribution",
+	"Contribute Now": "இப்போது பங்களிக்கவும்",
+	"hours validated": "மணிநேரம் சரிபார்க்கப்பட்டது",
+	"Progress Chart": "முன்னேற்ற காலவரிசை",
+	"Monthly": "மாதாந்திர",
+	"Quarterly": "காலாண்டு",
+	"Gender Contribution": "பாலின பங்களிப்பு",
+	"State Wise distribution": "மாநில வாரியான பகிர்மானம்",
+	"Age Group Distribution": "வயது குழு பகிர்மானம்",
 	"An open data strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.": "ஒரு திறந்த தரவு வியூகம் பல்வேறு மொழி சமூகங்கள், தங்கள் மொழியில் ஆர்வம் கொண்ட தனிநபர்கள் மற்றும் தொழில்நுட்ப வல்லுநர்களால் பேச்சறிதல் பயன்பாடுகளை உருவாக்கவும் மற்றும் சமூகத்தின் நன்மைக்காக பல்வேறு களங்களில் அவற்றை ஒருங்கிணைக்கவும் உதவும்.",
 	"As the volume of internet users multiplies and there is a demand to access digital platforms for financial, educational and economic activities, there is a need to start thinking Indian languages first.": "இணைய பயனர்களின் அளவு பெருகுவதோடு, நிதி, கல்வி மற்றும் பொருளாதார நடவடிக்கைகளுக்கான டிஜிட்டல் தளங்களை அணுகுவதற்கான தேவை இருப்பதால், முதலில் இந்திய மொழிகள் என்று சிந்திக்கத் தொடங்க வேண்டிய அவசியம் உள்ளது.",
 	"Winning back our languages by introducing localization in our ecosystem": "எங்கள் சூழ்மண்டல அமைப்பில் உள்ளூர்மயமாக்கலை அறிமுகப்படுத்துவதன் மூலம் நமது மொழிகளை வென்றெடுப்பது.",
