--- a/locales/ta.json
+++ b/locales/ta.json
@@ -67,8 +67,8 @@
 	"Others": "மற்றவர்",
 	"Terms of Use": "Terms of Use",
 	"Copyright & Licensing Notice": "Copyright & Licensing Notice",
-	"Recording Instructions": "Recording Instructions",
-	"START": "START",
+	"Recording Instructions": "பதிவு செய்யும் வழிமுறைகள்",
+	"START": "தொடங்கு",
 	"Let's get started!": "Let's get started!",
 	"SKIP": "SKIP",
 	"STOP RECORDING": "STOP RECORDING",
@@ -87,11 +87,11 @@
 	"Contribute More": "மேலும் பங்களிக்க",
 	"Share it with your friends and family": "இதை உங்கள் நண்பர்கள் மற்றும் குடும்பத்தினருடன் பகிர்ந்து கொள்ளுங்கள்",
 	"Come Back again to<br />hit your goalpost": "Come Back again to<br />hit your goalpost",
-	"Please test your <b>microphone</b>": "Please test your <b>microphone</b>",
-	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
-	"Ensure there is <b>no background noise</b>": "Ensure there is <b>no background noise</b>",
-	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>",
-	"Get started by clicking on <b>Record</b> button": "Get started by clicking on <b>Record</b> button",
+	"Please test your <b>microphone</b>": "உங்கள் <b>ஒலிவாங்கியை</b> சோதிக்கவும்",
+	"Please test your <b>speakers</b>": "உங்கள் <b>ஒலிபெருக்கி</b> சோதிக்கவும்",
+	"Ensure there is <b>no background noise</b>": "<b>பின்னணி இரைச்சல் இல்லை</b> என்பதை உறுதிப்படுத்தவும்",
+	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "கொடுக்கப்பட்ட உரையை பதிவு செய்வதற்கு முன், <b>சத்தமாக வாசிப்பதன் </b> மூலம் சௌகரியப்படுத்திக் கொள்ளுங்கள்",
+	"Get started by clicking on <b>Record</b> button": "<b>பதிவு</b> பொத்தானைக் கிளிக் செய்து தொடங்கவும்",
 	"Instructions": "Instructions",
 	"Play": "Play",
 	"Validating Instructions": "Validating Instructions",
