|Priyanshu| translate text for Recording page and validation page in Tamil

--- a/locales/ta.json
+++ b/locales/ta.json
@@ -70,15 +70,15 @@
 	"Recording Instructions": "பதிவு செய்யும் வழிமுறைகள்",
 	"START": "தொடங்கு",
 	"Let's get started!": "Let's get started!",
-	"SKIP": "SKIP",
-	"STOP RECORDING": "STOP RECORDING",
-	"Audio recording is too small. Please Re-record": "Audio recording is too small. Please Re-record",
-	"RE-RECORD": "RE-RECORD",
-	"NEXT": "NEXT",
+	"SKIP": "தவிர்",
+	"STOP RECORDING": "பதிவு செய்வதை நிறுத்து",
+	"Audio recording is too small. Please Re-record": "ஆடியோ பதிவு மிகவும் சிறியது. மீண்டும் பதிவுசெய்க",
+	"RE-RECORD": "மீண்டும் பதிவுசெய்",
+	"NEXT": "அடுத்தது",
 	"away from reaching your goal!": "away from reaching your goal!",
-	"Error!!!": "Error!!!",
-	"An unexpected error occured while processing your request. Please try after some time.": "An unexpected error occured while processing your request. Please try after some time.",
-	"Close": "Close",
+	"Error!!!": "பிழை",
+	"An unexpected error occured while processing your request. Please try after some time.": "உங்கள் வேண்டுகோளை நிறைவேற்ற முயன்ற போது எதிர்பாராத பிழை ஏற்பட்டது. சிறிது நேரம் கழித்து முயற்சிக்கவும்.",
+	"Close": "மூடு",
 	"Thank you for contributing!": "பங்களித்ததற்கு நன்றி!",
 	"Your contribution has got us <b><span id=\"user-contribution\">0 seconds</span></b> closer to our goal!!!": "உங்கள் பங்களிப்பு எங்கள் இலக்கை நெருங்கும் நேரத்தில் <b><span id=\"user-contribution\">0 seconds</span></b> வினாடிகள் குறைத்துள்ளது",
 	"Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.": "Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.",
@@ -93,7 +93,7 @@
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "கொடுக்கப்பட்ட உரையை பதிவு செய்வதற்கு முன், <b>சத்தமாக வாசிப்பதன் </b> மூலம் சௌகரியப்படுத்திக் கொள்ளுங்கள்",
 	"Get started by clicking on <b>Record</b> button": "<b>பதிவு</b> பொத்தானைக் கிளிக் செய்து தொடங்கவும்",
 	"Instructions": "Instructions",
-	"Play": "Play",
+	"Play": "இயக்கு",
 	"Validating Instructions": "Validating Instructions",
 	"Say": "கூறு",
 	"Contribute Your Voice": "உங்கள் குரலில் பங்களிப்பு செய்யுங்கள்",
@@ -161,11 +161,17 @@
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> குரல் மாதிரிகளை சரிபார்க்க எங்களுக்கு உதவியுள்ளீர்கள்",
 	"Validate More": "மேலும் சரிபார்க்க",
 	"Incorrect": "Incorrect",
-	"Replay": "Replay",
+	"Replay": "மறுபடி இயக்கு",
 	"Pause": "Pause",
 	"Correct": "Correct",
-	"Skip": "Skip",
+	"Skip": "தவிர்",
+	"Congratulations! You have contributed a batch of your voice!": "வாழ்த்துக்கள்! உங்கள் குரலில் ஒரு தொகுதி பங்களித்துள்ளீர்கள்!",
 	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
 	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
-	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample"
+	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
+	"Oops": "Oops",
+	"Page Not Found": "நீங்கள் தேடிய பக்கம் கிடைக்கவில்லை"	,
+	"Looks like you have taken a wrong turn here": "நீங்கள் இங்கே ஒரு தவறான திருப்பம் எடுத்தது போல தோன்றுகிறது",
+	"Click Here": "சொடுக்கவும் இங்கே",
+	"to go back to home page": "முகப்புப் பக்கத்துக்கு செல்ல"
 }
