--- a/locales/hi.json
+++ b/locales/hi.json
@@ -135,5 +135,8 @@
 	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
 	"Replay": "फिर से प्ले करें",
 	"Pause": "पॉज",
-	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "रिकॉर्डिंग <span id=\"counter\"></span>  सेकंड के बाद स्वतः बंद हो जाएगी"
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "रिकॉर्डिंग <span id=\"counter\"></span>  सेकंड के बाद स्वतः बंद हो जाएगी",
+	"hours": "घंटे",
+	"minutes": "मिनट",
+	"seconds": "सेकंड"
 }
