--- a/locales/gu.json
+++ b/locales/gu.json
@@ -153,6 +153,13 @@
 	"EkStep Foundation": "EkStep ફાઉન્ડેશન",
 	"hrs recorded in": "%language માં %hours અવાજો રેકોર્ડ કર્યા",
 	"hrs validated in": "%language માં %hours અવાજો રેકોર્ડ કર્યા",
-	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "રેકોર્ડિંગ આપમેળે <span id=\"counter\"></span> સેકંડ પછી બંધ થઈ જશે"
-	
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "રેકોર્ડિંગ આપમેળે <span id=\"counter\"></span> સેકંડ પછી બંધ થઈ જશે",
+	"Incorrect": "ખોટો",
+	"Replay": "ફરી-પ્લે કરો",
+	"Pause": "થોભો",
+	"Correct": "યોગ્ય",
+	"Skip": "પછી રાખો",
+	"hours": "કલાકો",
+	"minutes": "મિનિટો",
+	"seconds": "સેકન્ડ્સ"
 }
