--- a/locales/ml.json
+++ b/locales/ml.json
@@ -132,5 +132,13 @@
 	"EkStep Foundation": "ഏക്സ്റ്റെപ്പ് ഫൗണ്ടേഷൻ",
 	"hrs recorded in": "%language ഭാഷയിൽ %hours എണ്ണം റെക്കോർഡ് ചെയ്തിട്ടുണ്ട്",
 	"hrs validated in": "%language ഭാഷയിൽ %hours എണ്ണം സാധൂകരിച്ചിട്ടുണ്ട്",
-	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> സെക്കൻഡിനുശേഷം റെക്കോർഡിംഗ് യാന്ത്രികമായി നിർത്തും"
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> സെക്കൻഡിനുശേഷം റെക്കോർഡിംഗ് യാന്ത്രികമായി നിർത്തും",
+	"Incorrect": "തെറ്റായ",
+	"Replay": "വീണ്ടും പ്ലേ ചെയ്യുക",
+	"Pause": "വിരാമം",
+	"Correct": "ശരിയായ",
+	"Skip": "ഒഴിവാക്കുക",
+	"hours": "മണിക്കൂർ",
+	"minutes": "മിനിറ്റ്",
+	"seconds": "സെക്കൻഡ്"
 }
