--- a/locales/mr.json
+++ b/locales/mr.json
@@ -152,9 +152,12 @@
 	"hrs validated in": "%hours तास सत्यापित केले %language मध्ये",
 	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> सेकंदानंतर रेकॉर्डिंग स्वयंचलितपणे थांबेल",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings",
-	"Incorrect": "Incorrect",
-	"Replay": "Replay",
-	"Pause": "Pause",
-	"Correct": "Correct",
-	"Skip": "Skip"
+	"Incorrect": "चुकीचे",
+	"Replay": "रि-प्ले",
+	"Pause": "विराम द्या",
+	"Correct": "योग्य",
+	"Skip": "वगळा",
+	"hours": "तास",
+	"minutes": "मिनिटे",
+	"seconds": "सेकंद"
 }
