| Raunak | ta and te translations

--- a/locales/te.json
+++ b/locales/te.json
@@ -27,7 +27,7 @@
 	"Not You? Change User": "మీరు కాదా? వినియోగదారుడిని మార్చండి",
 	"Username": "వినియోగదారుని పేరు",
 	"Enter preferred username": "మీకు కావలసిన వినియోగదారుని పేరును ఎంచుకోండి",
-	"Username cannot be more than 12 characters": "Username cannot be more than 12 characters",
+	"Username cannot be more than 12 characters": "వినియోగదారుని పేరు 12 అక్షరాలకు మించకూడదు",
 	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
 	"Mother Tongue": "మాతృభాష",
 	"Select Mother Tongue": "మాతృభాషను ఎంచుకోండి.",
@@ -82,12 +82,12 @@
 	"Select the language": "ఒక భాషను ఎంచుకోండి",
 	"All Languages": "అన్ని భాషలు",
 	"Data Last Updated": "సమాచారం ఆఖరి సారి నవీకరించబడ్డ సమయం",
-	"We do not have any data for this language, would you like to contribute for it?": "We do not have any data for this language, would you like to contribute for it?",
-	"Contribute Now": "Contribute Now",
+	"We do not have any data for this language, would you like to contribute for it?": "ఈ భాష కోసం మాకు డేటా లేదు, మీరు దాని కోసం సహకరించాలనుకుంటున్నారా?",
+	"Contribute Now": "ఇప్పుడు దోహదం",
 	"hours validated": "చెల్లుబాటు చేసిన గంటలు",
 	"Progress Chart": "పురోగతి కాల వ్యవధి",
-	"Monthly": "Monthly",
-	"Quarterly": "Quarterly",
+	"Monthly": "నెలవారీ",
+	"Quarterly": "త్రైమాసిక",
 	"Gender Contribution": "లింగం సహాయం",
 	"State Wise distribution": "రాష్ట్రం వారీగా పంపకం",
 	"Age Group Distribution": "వయస్సు పంపకం",
@@ -112,11 +112,14 @@
 	"Incorrect": "సరికానిది",
 	"Play": "ప్లే చెయ్యండి",
 	"Replay": "మళ్ళీ ప్లే చెయ్యండి",
-	"Pause": "Pause",
+	"Pause": "పాజ్",
 	"Correct": "సరైనది",
 	"Skip": "స్కిప్ చెయ్యండి",
 	"Validating Instructions": "చెల్లుబాటు సూచనలు",
 	"Ensure the voice is <b>clear and audible</b>": "మీ గొంతు స్పష్టంగా మరియు అర్ధమైయ్యేటట్లు ఉందని నిర్దారించుకోండి",
 	"Match the voice to the text <b>accurately</b>": "మీ మాటలకు ఆ పదాలు సరి వచ్చేటట్లు చూడండి",
-	"If you are unsure of the match, skip the particular voice sample": "ఒకవేళ మీ మాటలు ఆ పదాలకు సరిగ్గా వస్తున్నాయని మీకు అనిపించకపోతే దాన్ని స్కిప్ చెయ్యండి"
+	"If you are unsure of the match, skip the particular voice sample": "ఒకవేళ మీ మాటలు ఆ పదాలకు సరిగ్గా వస్తున్నాయని మీకు అనిపించకపోతే దాన్ని స్కిప్ చెయ్యండి",
+	"minutes": "గంటలు",
+	"hours": "నెలలు",
+	"seconds": "సెకనుల"
 }
