--- a/locales/ta.json
+++ b/locales/ta.json
@@ -69,13 +69,13 @@
 	"Copyright & Licensing Notice": "Copyright & Licensing Notice",
 	"Recording Instructions": "பதிவு செய்யும் வழிமுறைகள்",
 	"START": "தொடங்கு",
-	"Let's get started!": "Let's get started!",
+	"Let's get started!": "நாம் தொடங்கலாம்!",
 	"SKIP": "தவிர்",
 	"STOP RECORDING": "பதிவு செய்வதை நிறுத்து",
 	"Audio recording is too small. Please Re-record": "ஆடியோ பதிவு மிகவும் சிறியது. மீண்டும் பதிவுசெய்க",
 	"RE-RECORD": "மீண்டும் பதிவுசெய்",
 	"NEXT": "அடுத்தது",
-	"away from reaching your goal!": "away from reaching your goal!",
+	"away from reaching your goal!": "உங்கள் இலக்கை அடைய வில்லை!",
 	"Error!!!": "பிழை",
 	"An unexpected error occured while processing your request. Please try after some time.": "உங்கள் வேண்டுகோளை நிறைவேற்ற முயன்ற போது எதிர்பாராத பிழை ஏற்பட்டது. சிறிது நேரம் கழித்து முயற்சிக்கவும்.",
 	"Close": "மூடு",
@@ -86,15 +86,15 @@
 	"We know you can do more!": "உங்களால் இன்னும் செய்ய முடியும் என்று எங்களுக்குத் தெரியும்!",
 	"Contribute More": "மேலும் பங்களிக்க",
 	"Share it with your friends and family": "இதை உங்கள் நண்பர்கள் மற்றும் குடும்பத்தினருடன் பகிர்ந்து கொள்ளுங்கள்",
-	"Come Back again to<br />hit your goalpost": "Come Back again to<br />hit your goalpost",
+	"Come Back again to<br />hit your goalpost": "உங்கள் இலக்கு இடுகையை<br />அடைய மீண்டும் வருக",
 	"Please test your <b>microphone</b>": "உங்கள் <b>ஒலிவாங்கியை</b> சோதிக்கவும்",
 	"Please test your <b>speakers</b>": "உங்கள் <b>ஒலிபெருக்கி</b> சோதிக்கவும்",
 	"Ensure there is <b>no background noise</b>": "<b>பின்னணி இரைச்சல் இல்லை</b> என்பதை உறுதிப்படுத்தவும்",
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "கொடுக்கப்பட்ட உரையை பதிவு செய்வதற்கு முன், <b>சத்தமாக வாசிப்பதன் </b> மூலம் சௌகரியப்படுத்திக் கொள்ளுங்கள்",
 	"Get started by clicking on <b>Record</b> button": "<b>பதிவு</b> பொத்தானைக் கிளிக் செய்து தொடங்கவும்",
-	"Instructions": "Instructions",
+	"Instructions": "வழிமுறைகள்",
 	"Play": "இயக்கு",
-	"Validating Instructions": "Validating Instructions",
+	"Validating Instructions": "சரிபார்த்தல் வழிமுறைகள்",
 	"Say": "கூறு",
 	"Contribute Your Voice": "உங்கள் குரலில் பங்களிப்பு செய்யுங்கள்",
 	"Contribute your voice to create an open data repository of Indian languages": "இந்திய மொழிகளின் திறந்த தரவு களஞ்சியத்தை உருவாக்க உங்கள் குரலில் பங்களிப்பு செய்யுங்கள்",
@@ -108,7 +108,7 @@
 	"hrs validated in": "%hours மணிநேரம் %language இல் சரிபார்க்கப்பட்டது",
 	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> விநாடிகளுக்குப் பிறகு பதிவு தானாகவே நிறுத்தப்படும்",
 	"Select the language for contribution": "பங்களிப்புக்கான மொழியைத் தேர்ந்தெடுக்கவும்",
-	"Show All": "Show All",
+	"Show All": "அனைத்து காட்டு",
 	"Vakyansh: A crowdsourcing initiative for Indian languages": "வாகியான்ஷ்: இந்திய  மொழிகளுக்கான ஒரு கூட்டுசேகர முயற்சி",
 	"For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.": "இந்திய மொழிகளில் பேச்சறிதல் மாதிரிகளின் வளர்ச்சிக்கு, பன்முகப்படுத்தப்பட்ட இந்தியக் குரல்களின் திறந்த தரவு களஞ்சியத்தின் தேவை உள்ளது. இந்திய குரல்களின் மாறுபட்ட திறந்த தரவு களஞ்சியத்தை உருவாக்க உங்கள் குரலை பங்களிக்க வக்யான்ஷ் உங்களை அழைக்கிறது.",
 	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "நீங்கள் பங்களிக்கும் மாநிலங்கள், பேச்சுவழக்குகள், உச்சரிப்புகள், பாலினம் மற்றும் வயது பிரிவு போன்ற பலதரப்பட்ட தரவின் பன்முகத்தன்மை, பேச்சறிதல் மாதிரிகளை உருவாக்குவதற்கான அத்தியாவசியமான ஒன்றாகும்.  நாடு எங்கிலும் உள்ள இந்த பன்முகத்தன்மையின் முக்கியத்துவம், நமது மொழிகளை மேம்படுத்துவதில் கூட்டு வலிமையை அளிக்கிறது.",
@@ -119,14 +119,14 @@
 	"By number of speakers": "பேச்சாளர்களின் எண்ணிக்கையால்",
 	"VIEW ALL DETAILS": "எல்லா விவரங்களையும் காண்க",
 	"Enter preferred username": "விருப்பமான பயனர்பெயரை உள்ளிடவும்",
-	"Username cannot be more than 12 characters": "Username cannot be more than 12 characters",
+	"Username cannot be more than 12 characters": "பயனர்பெயர் 12 எழுத்துகளுக்கு மேல் இருக்கக்கூடாது",
 	"Select Mother Tongue": "தாய்மொழியைத் தேர்ந்தெடுக்கவும்",
 	"Select Age Group": "வயதுக் பிரிவைத் தேர்ந்தெடுக்கவும்",
 	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "நான் விதிமுறைகளையும் நிபந்தனைகளையும் படித்து ஒப்புக்கொள்கிறேன் <a href=\"/terms-and-conditions\"> விதிமுறைகளும் நிபந்தனைகளும் </a>",
 	"Select the language": "ஒரு மொழியைத் தேர்ந்தெடுக்கவும்",
 	"All Languages": "எல்லா மொழிகள்",
 	"Data Last Updated": "தரவு கடைசியாக புதுப்பிக்கப்பட்ட நேரம்",
-	"We do not have any data for this language, would you like to contribute for it?": "We do not have any data for this language, would you like to contribute for it?",
+	"We do not have any data for this language, would you like to contribute for it?": "இந்த மொழிக்கான தரவு எதுவும் எங்களிடம் இல்லை, அதற்கு நீங்கள் பங்களிக்க விரும்புகிறீர்களா?",
 	"Contribute Now": "இப்போது பங்களிக்கவும்",
 	"hours validated": "மணிநேரம் சரிபார்க்கப்பட்டது",
 	"Progress Chart": "முன்னேற்ற காலவரிசை",
@@ -160,18 +160,19 @@
 	"Thank you for validating!": "சரிபார்த்ததற்கு நன்றி!",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> குரல் மாதிரிகளை சரிபார்க்க எங்களுக்கு உதவியுள்ளீர்கள்",
 	"Validate More": "மேலும் சரிபார்க்க",
-	"Incorrect": "Incorrect",
+	"Incorrect": "தவறான",
 	"Replay": "மறுபடி இயக்கு",
-	"Pause": "Pause",
-	"Correct": "Correct",
+	"Pause": "இடைநிறுத்தம்",
+	"Correct": "சரி",
 	"Skip": "தவிர்",
 	"Congratulations! You have contributed a batch of your voice!": "வாழ்த்துக்கள்! உங்கள் குரலில் ஒரு தொகுதி பங்களித்துள்ளீர்கள்!",
 	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
 	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
 	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
-	"Oops": "Oops",
+	"Oops": "அச்சச்சோ",
 	"Page Not Found": "நீங்கள் தேடிய பக்கம் கிடைக்கவில்லை"	,
 	"Looks like you have taken a wrong turn here": "நீங்கள் இங்கே ஒரு தவறான திருப்பம் எடுத்தது போல தோன்றுகிறது",
 	"Click Here": "சொடுக்கவும் இங்கே",
-	"to go back to home page": "முகப்புப் பக்கத்துக்கு செல்ல"
+	"to go back to home page": "முகப்புப் பக்கத்துக்கு செல்ல",
+	"seconds": "வினாடிகள்"
 }
