--- a/locales/or.json
+++ b/locales/or.json
@@ -156,5 +156,6 @@
 	"Skip": "ଏଡାନ୍ତୁ",
 	"hours": "ଘଣ୍ଟା",
 	"minutes": "ମିନିଟ୍",
-	"seconds": "ସେକେଣ୍ଡ"
+	"seconds": "ସେକେଣ୍ଡ",
+	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "ହୋମ୍ ପେଜକୁ ଯିବା ପାଇଁ ଏଠାରେ <a class=\"\" href=\"/\"> ଉପରେ କ୍ଲିକ କରନ୍ତୁ।</a>"
 }
