--- a/locales/pa.json
+++ b/locales/pa.json
@@ -153,5 +153,6 @@
 	"Skip": "ਛੱਡੋ",
 	"hours": "ਘੰਟੇ",
 	"minutes": "ਮਿੰਟ",
-	"seconds": "ਸਕਿੰਟ"
+	"seconds": "ਸਕਿੰਟ",
+	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "ਹੋਮ ਪੰਨੇ 'ਤੇ ਜਾਣ ਲਈ <a class=\"\" href=\"/\">'ਤੇ ਕਲਿੱਕ ਕਰੋ</a>"
 }
