--- a/locales/hi.json
+++ b/locales/hi.json
@@ -138,5 +138,6 @@
 	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "रिकॉर्डिंग <span id=\"counter\"></span>  सेकंड के बाद स्वतः बंद हो जाएगी",
 	"hours": "घंटे",
 	"minutes": "मिनट",
-	"seconds": "सेकंड"
+	"seconds": "सेकंड",
+	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "अपने होम पेज पर जाने के लिए <a class=\"\" href=\"/\">यहाँ क्लिक</a> करें"
 }
