--- a/locales/kn.json
+++ b/locales/kn.json
@@ -143,5 +143,6 @@
 	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> ಸೆಕೆಂಡುಗಳ ನಂತರ ರೆಕಾರ್ಡಿಂಗ್ ಸ್ವಯಂಚಾಲಿತವಾಗಿ ನಿಲ್ಲುತ್ತದೆ",
 	"hours": "ಗಂಟೆಗಳು",
 	"minutes": "ನಿಮಿಷಗಳು",
-	"seconds": "ಸೆಕೆಂಡುಗಳನ್ನು"
+	"seconds": "ಸೆಕೆಂಡುಗಳನ್ನು",
+	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "ಮುಖಪುಟಕ್ಕೆ ಹಿಂತಿರುಗಲು <a class=\"\" href=\"/\">ಇಲ್ಲಿ ಅನ್ನು ಒತ್ತಿರಿ</a>"
 }
